--- a/css/_style_blue.css
+++ b/css/_style_blue.css
@@ -2003,7 +2003,7 @@ form.gray::before,form.gray [data-target="tooltip"],form.gray .btn-submit,form.g
 }
 
 .one-insurance h2 {
-    color: #00accd;
+    color: #727272;
     font-size: 20px
 }
 
