--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 .s1{
-	margin-top: 7%;
+	margin-top: 65px;
+	text-align: center;
+}
+
+.s1-1{
+	margin-top: 90px;
 	text-align: center;
 }
 .s50{
 	padding: 10% 0;
-	margin-top: 4%;
+	margin-top: 45px;
 }
 .si50{
 	padding: 0 10%;
@@ -91,6 +96,20 @@
 	border: #ffffff!important;
 	margin-top: 10px!important;
 	max-width: 92px!important;
+}
+
+.carousel-inner{
+	margin-top: 60px;
+}
+
+.font-cal{
+	color: #727272b5;
+	font-size: 20px;
+}
+
+.h3-size{
+	font-size: 20px;
+	color: #999999;
 }
 @media (min-width:368px) and (max-width:767px){
 	.phone3{margin-top: 17px;}
