--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,13 @@
 	margin-top: 42px;
 	margin-bottom: 42px;
 }
+
+.line-blue{
+	border-top: 1px solid #00abcc;
+	width: 75%;
+	text-align: center;
+	margin-left: 13%;
+}
 @media (min-width:368px) and (max-width:767px){
 	.phone3{margin-top: 17px;}
 }
