--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 	margin: 10%;
 }
 .si53{
-	margin: 0 21%;
+	margin: 0 22%;
 }
 .si55{
 	margin: 3%;
@@ -65,7 +65,7 @@
 	color: white;
 }
 .Phone4{
-	top: -37px;
+	top: -22px;
     position: absolute;
 }
 
@@ -149,6 +149,11 @@
 	width: 75%;
 	text-align: center;
 	margin-left: 13%;
+}
+
+.img-text{
+	padding: 0 32% 0 0;
+	line-height: 1.3;
 }
 @media (min-width:368px) and (max-width:767px){
 	.phone3{margin-top: 17px;}
