--- a/css/_style_blue.css
+++ b/css/_style_blue.css
@@ -1571,7 +1571,7 @@ select {
 }
 
 .question-mark:after {
-    background: #b8b8b8 url(../img/sprite-new.png) no-repeat -311px -315px
+    background: #b8b8b8 url(../imgage/sprite-new.png) no-repeat -311px -315px
 }
 
 .attention-mark:after {
@@ -5705,6 +5705,208 @@ form.orange h3 { color: #eb661c !important; }
 .flex-body{
     display:none;
     margin-bottom: 15px;
+}
+.s1{
+    margin-top: 60px;
+    text-align: center;
+}
+
+.s1-1{
+    margin-top: 90px;
+    text-align: center;
+}
+.s50{
+    padding: 10% 0;
+    margin-top: 4%;
+}
+.si50{
+    padding: 0 10%;
+}
+.text-s1{
+    margin: 10%;
+}
+.si53{
+    margin: 0 22%;
+}
+.si55{
+    margin: 3%;
+}
+.slide-1{
+    margin-top: 10%;
+}
+.slide-2{
+    margin-top: 4%;
+}
+.card-content{
+    padding: 2%;
+    background-color: #ededed;
+}
+.btn-see{
+    padding: 5% 45%;
+}
+.icon-text{
+    color: #807a7a;
+}
+.card-h{
+    padding: 0 0 2% 0;
+}
+.panel-title {
+    position: relative;
+}
+
+.panel-title::after {
+    content: "\f107";
+    color: #00abcc;
+    right: 0;
+    position: absolute;
+    font-family: "FontAwesome"
+}
+
+.panel-title[aria-expanded="true"]::after {
+    content: "\f106";
+}
+.btn-see1{
+    width: 20%;
+    padding: 5px;
+    border-radius: 40px;
+    background-color: #eb661c;
+    color: white;
+}
+.Phone4{
+    top: -57px;
+    position: absolute;
+    right: 23%;
+    height: 490px;
+}
+
+.bg-color {
+    position: relative;
+    padding: 10px 10px 15px;
+    width: 100%;
+    transition: all .5s;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
+
+.bg-color1 {
+    position: relative;
+    padding: 42px 10px 42px 10px;
+    width: 100%;
+    transition: all .5s;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
+.bg-color:hover{
+    background-color: #ededed54;
+}
+/*.icon-border {
+	padding: 5px;
+	background: #ffffff;
+	border-radius: 5px;
+	margin-top: 10px;
+	max-width: 92px;
+}
+*/
+.ico-blue-white .one-insurance img {
+    padding: 5px!important;
+    background: #fff !important;
+    border-radius: 5px!important;
+    border: #ffffff!important;
+    margin-top: 10px!important;
+    max-width: 92px!important;
+}
+
+.carousel-inner{
+    margin-top: 60px;
+}
+
+.font-cal{
+    color: #727272b5;
+    font-size: 20px;
+}
+
+.h3-size{
+    font-size: 20px;
+    color: #999999;
+}
+
+.header-accord{
+    font-size: 18px;
+}
+
+.content-accord{
+    font-size: 13px;
+}
+
+.accord-section{
+    padding: 20px 40px 20px 20px;
+}
+
+.a-see{
+    color: #ff6803;
+    text-align: center;
+    float: left;
+    width: 100%;
+}
+
+.phone-section{
+    margin-top: 42px;
+    margin-bottom: 42px;
+}
+
+.line-blue{
+    border-top: 1px solid #00abcc;
+    width: 75%;
+    text-align: center;
+    margin-left: 13%;
+}
+
+.img-text{
+    padding: 0 32% 0 0;
+    line-height: 1.3;
+}
+@media (min-width:368px) and (max-width:767px){
+    .phone3{margin-top: 17px;}
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .back-to-top {
+        bottom: 15px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .navbar-toggle {
+        margin: 35px 10px 0;
+    }
+}
+@media (min-width: 549px) and (max-width: 768px){
+    .phone3{margin-top: 10px;}
+}
+@media (min-width:768px) and (max-width:1023px){
+    .Phone4{top: 52px;}
+}
+@media (min-width:1024px) and (max-width:1200px){
+    .Phone4{top: -6px;}
+}
+@media (min-width:375px) and (max-width:767px){
+    .btn-see3{text-align: center;}
+}
+@media (min-width:375px) and (max-width:767px){
+    .Phone4{top: -37px;position: initial;margin-left: 20%;}
+}
+@media screen and (width: 375px) {
+    .Phone4{margin-left: -3%;}
+}
+@media (min-width:550px) and (max-width:767px){
+    .img-people{margin-left: 14%;}
+}
+@media screen and (width: 375px) {
+    .img-people{margin-left: 4%;}
+}
+@media (min-width:768px) and (max-width:1023px){
+    .navbar>.container .logo{width: 230px;}
 }
 
 
